2009-11-06  Ross Younger <wry@ecoscentric.com>

	* ea_lpc2468_nand.c: Use mtd_ecc256_fast, not linux_mtd_ecc.

2009-08-18  Ross Younger <wry@ecoscentric.com>

	* ea_lpc_2468_nand.c: Minor bugfix - attach on the interrupt handle,
	not the interrupt object, even if it's currently inconsequential.

2009-07-02  Ross Younger <wry@ecoscentric.com>

	* ea_lpc_2468_nand.c: Small optimisations:
	+ Condition-out poll-counting unless it's being reported.
	+ Properly defined initial-wait semantics for wait_ready_polled;
	tweak callers to match.
	+ Don't bother with an interrupt-assisted sleep for a small 
	time (i.e. a page read).

2009-06-05  Ross Younger <wry@ecoscentric.com>

	* ea_lpc_2468_nand.c: refactor for k9fxx08x0x changes; retab.
	* * BBT per-chip
	* * provide for locking though we don't use it on this board.

2009-05-27  Ross Younger <wry@ecoscentric.com>

	* src/ea_lpc_2468_nand.c: Rip out eCosPro HAL ifdefs & partial rewrite
	  for clarity.

2009-05-14  Ross Younger <wry@ecoscentric.com>

	* cdl/hal_arm_lpc24xx_ea2468.cdl: Add NAND support and options
	* cdl/manual_partition.cdl: Created
	* src/ea_lpc_2468_nand.c: Created

2009-01-31  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_arm_lpc24xx_ea2468.cdl: update compiler flags for gcc 4.x

2009-01-24  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_arm_lpc24xx_ea2468.cdl: switch from arm-elf-gcc to
	arm-eabi-gcc. Remove -mno-short-load-words.

2008-11-01  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/hal_arm_lpc24xx_ea2468.cdl: Fixed typo
	* include/pkgconf/mlt_arm_lpc24xx_ea2468_ram.h: Reserve 1 MB of
          SDRAM for RedBoot.
	* include/pkgconf/mlt_arm_lpc24xx_ea2468_ram.ldi: Reserve 1 MB of
          SDRAM for RedBoot
	* src/platform_i2c.c: Compile only if I2C channel 0 is supported       

2008-09-18  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/hal_arm_lpc2xxx_ea2468.cdl: Added compile platform_i2c.c and
	  CYGPKG_HAL_ARM_LPC24XX_EA2468_TESTS for building I2C test