@@ -1,3 +1,8 @@
+2009-11-10  Ross Younger <wry@ecoscentric.com>
+
+	* ea_lpc2468_nand.c: Fix interrupt-mode brokenness when the debug
+	  level was low.
+
 2009-11-06  Ross Younger <wry@ecoscentric.com>
 
 	* ea_lpc2468_nand.c: Use mtd_ecc256_fast, not linux_mtd_ecc.
